--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "^1.2.5",
+    "apollo-client": "^2.3.5",
+    "apollo-link": "^1.2.2",
+    "apollo-link-http": "^1.5.4",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
     "react": "^16.4.1",
+    "react-apollo": "^2.1.9",
     "react-dom": "^16.4.1",
-    "react-scripts-ts": "2.16.0"
+    "react-router-dom": "^4.3.1",
+    "react-scripts-ts": "2.16.0",
+    "sanitize.css": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -16,8 +25,15 @@
   "devDependencies": {
     "@types/jest": "^23.1.4",
     "@types/node": "^10.5.1",
+    "@types/prop-types": "^15.5.3",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
+    "@types/react-router-dom": "^4.2.7",
+    "react-hot-loader": "^4.3.3",
     "typescript": "^2.9.2"
+  },
+  "prettier": {
+    "semi": false,
+    "printWidth": 80
   }
 }
